test/typecheck/y_error_11.j.gold
test/y_error_11.j:6:13: error: invalid unary operator '-' on non-Int type 'String'
   |
 6 |     a = -a;
   |         ^
