test/typecheck/y_error_11.j
class UWU
{
	Void main()
	{
		String a;
		a = -a;
	}
}
